force-app/main/default/objects/Opportunity/fields/Housing_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Status__c</fullName>
    <description>[Peoplesoft] - Examples include; Applied, Exception, Confirm
[DW: sfe_opportunity]</description>
    <label>Housing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Assigned/Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Confirm</fullName>
            </value>
            <value>
                <fullName>Created Application</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Intent to Apply - Continue Application</fullName>
            </value>
            <value>
                <fullName>Living Off Campus</fullName>
            </value>
            <value>
                <fullName>Signed Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>