force-app/main/default/objects/Opportunity/fields/Housing_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Housing_Status_Date__c</fullName>
    <description>[Peoplesoft] - date of housing status
[DW: sfe_opportunity]</description>
    <inlineHelpText>The last date the status was updated.</inlineHelpText>
    <label>Housing Status Date</label>
    <type>Date</type>
</CustomField>