force-app/main/default/objects/Opportunity/fields/I_20_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>I_20_Sent_Date__c</fullName>
    <description>[Peoplesoft] - Date I-20 was mailed to the admitted student</description>
    <inlineHelpText>Date I-20 was mailed to the admitted student</inlineHelpText>
    <label>I-20 Sent Date</label>
    <type>Date</type>
</CustomField>