force-app/main/default/objects/Opportunity/fields/Include_in_Class_Profile__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Class_Profile__c</fullName>
    <businessOwnerGroup>Data_Owner_WPC_Graduate_Programs_Office</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>[Apex] - Denotes in this opportunity's master tracker record should be included in the building of the class profile. Used only by WPC GPO.</description>
    <inlineHelpText>[Apex] - Denotes in this opportunity's master tracker record should be included in the building of the class profile. Used only by WPC GPO.</inlineHelpText>
    <label>Include in Class Profile?</label>
    <type>Checkbox</type>
</CustomField>