force-app/main/default/objects/Opportunity/fields/Incomplete_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Review_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_Recruitment</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Manual]  This date is arbitrary and used for tracking the last time a staff member reviews an applicants' file for completion</description>
    <inlineHelpText>Date is the last time that staff reviewed the applicants' file for completion.</inlineHelpText>
    <label>Incomplete Review Date</label>
    <type>Date</type>
</CustomField>