force-app/main/default/objects/Opportunity/fields/Intent_Confirm_Enroll_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Intent_Confirm_Enroll_Qualifier__c</fullName>
    <description>[MC interactive email, manual entry] - Examples include: I plan to attend, I'm still considering, I'm not interested
[DW: sfe_opportunity]</description>
    <label>Intent/Confirm Enroll Qualifier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I plan to attend</fullName>
            </value>
            <value>
                <fullName>I am still considering</fullName>
            </value>
            <value>
                <fullName>I am not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>