force-app/main/default/objects/Opportunity/fields/Intent_Confirm_Enroll_Qualifier_Date__c.field-meta.xml
<CustomField>
    <fullName>Intent_Confirm_Enroll_Qualifier_Date__c</fullName>
    <description>[MC interactive email, manual entry] - Date the qualifier was captured for a prospective student in the Enrolled status.
[DW: sfe_opportunity]</description>
    <label>Intent/Confirm Enroll Date</label>
    <type>Date</type>
</CustomField>