force-app/main/default/objects/Opportunity/fields/Intent_Confirm_Enroll_Qualifier_Decision__c.field-meta.xml
<CustomField>
    <fullName>Intent_Confirm_Enroll_Qualifier_Decision__c</fullName>
    <description>[MC interactive email, manual entry] - Examples include: 1st Choice Program unavailable, BHC Admission, Continuing at 2 yr institution, Course Availability, Distance from Home, Financial, Going to 4 yr institution, Housing, I-20 issued by another University, Location, Major not offered at preferred campus, Military, Mission, Not admitted to 1st choice, Playing Athletics elsewhere, Reputation, Response time, Size (too big), Size (too small), Starting at 2 yr institution, Waiting on decision elsewhere
[DW: sfe_opportunity]</description>
    <label>Intent/Confirm Enroll Decision Factor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Choice Program unavailable</fullName>
            </value>
            <value>
                <fullName>BHC Admission</fullName>
            </value>
            <value>
                <fullName>Continuing at 2 yr institution</fullName>
            </value>
            <value>
                <fullName>Course Availability</fullName>
            </value>
            <value>
                <fullName>Distance from Home</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Going to 4 yr institution</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>I-20 issued by another University</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Major not offered at preferred campus</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Mission</fullName>
            </value>
            <value>
                <fullName>Not admitted to 1st choice</fullName>
            </value>
            <value>
                <fullName>Playing Athletics elsewhere</fullName>
            </value>
            <value>
                <fullName>Reputation</fullName>
            </value>
            <value>
                <fullName>Response time</fullName>
            </value>
            <value>
                <fullName>Size (too big)</fullName>
            </value>
            <value>
                <fullName>Size (too small)</fullName>
            </value>
            <value>
                <fullName>Starting at 2 yr institution</fullName>
            </value>
            <value>
                <fullName>Waiting on decision elsewhere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>