force-app/main/default/objects/Opportunity/fields/International_CI__c.field-meta.xml
<CustomField>
    <fullName>International_CI__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Peoplesoft] Calculated in PeopleSoft based on a combination of GPA and test scores; Admissions and Financial Aid use this score to determine an International applicants’ scholar segment. PS_ASU_UGCI_INT_VW.ASU_INTCI_TOTAL;
Available on reports until APPID gets access</description>
    <inlineHelpText>Calculated in PeopleSoft based on a combination of GPA and test scores; Admissions and Financial Aid use this score to determine an International applicants’ scholar segment.</inlineHelpText>
    <label>International CI</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>