force-app/main/default/objects/Opportunity/fields/International_Student__c.field-meta.xml
<CustomField>
    <fullName>International_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Manual import, purchased lists, prospect forms, F1/J1, webforms] - Checkbox to if student is international
[DW: sfe_opportunity]</description>
    <label>International Student</label>
    <type>Checkbox</type>
</CustomField>