force-app/main/default/objects/Opportunity/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_WPC_Graduate_Programs_Office</businessOwnerGroup>
    <description>[Manually entered by Grad WPC AdOps Users] - Denotes the date scheduled for an interview.</description>
    <inlineHelpText>[Manually entered by Grad WPC AdOps Users] - Denotes the date scheduled for an interview.</inlineHelpText>
    <label>Interview Date</label>
    <type>Date</type>
</CustomField>