force-app/main/default/objects/Opportunity/fields/Interview_Status__c.field-meta.xml
<CustomField>
    <fullName>Interview_Status__c</fullName>
    <businessOwnerGroup>Data_Owner_WPC_Graduate_Programs_Office</businessOwnerGroup>
    <description>[Manually entered by WPC GPO Users] - Denotes what the status of the interview is for this opportunity.</description>
    <inlineHelpText>[Manually entered by WPC GPO Users] - Denotes what the status of the interview is for this opportunity.</inlineHelpText>
    <label>Interview Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invited-Campus</fullName>
            </value>
            <value>
                <fullName>Invited-Zoom</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>