force-app/main/default/objects/Opportunity/fields/INTL_GPA__c.field-meta.xml
<CustomField>
    <fullName>INTL_GPA__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Peoplesoft] International GPA from transcript, PS Table = EXT_ACAD_SUM PS Field =CONVERT_GPA</description>
    <inlineHelpText>International GPA from high school transcripts</inlineHelpText>
    <label>INTL GPA</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>