force-app/main/default/objects/Opportunity/fields/Is_EC_Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Is_EC_Logged_in_User__c</fullName>
    <description>Value will equal Yes if the person viewing the record is the assigned Enrollment Coach on the Opportunity record.</description>
    <formula>IF(Enrollment_Coach__r.Id = $User.Id, TRUE, FALSE)</formula>
    <label>Is EC Logged in User</label>
    <type>Checkbox</type>
</CustomField>