force-app/main/default/objects/Opportunity/fields/Is_Gportal_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Gportal_Complete__c</fullName>
    <businessOwnerGroup>Data_Owner_WPC_Graduate_Programs_Office</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>[Updated by flow Task_RTAS_On_Update] Used to denote if this application decision is also entered in Gportal (Graduate Portal/PS).</description>
    <inlineHelpText>[Updated by flow Task_RTAS_On_Update] Used to denote if this application decision is also entered in Gportal (Graduate Portal/PS).</inlineHelpText>
    <label>Is Gportal Complete?</label>
    <type>Checkbox</type>
</CustomField>