force-app/main/default/objects/Opportunity/fields/Is_Owner_Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_Logged_in_User__c</fullName>
    <description>Formula field that indicates whether or not the logged in user ID matches the ID of the Opportunity Owner.</description>
    <formula>OwnerId =  $User.Id</formula>
    <inlineHelpText>Returns True (checked) if the logged in User is the Opportunity Owner.</inlineHelpText>
    <label>Is Owner Logged in User</label>
    <type>Checkbox</type>
</CustomField>