force-app/main/default/objects/Opportunity/fields/Lead_Source_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Subtype__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>[Common File Layout] [Stova, RFI, Submitted Grad Application Integrations] [Manual] The most recent source/platform that the prospect came in on (ex: Facebook, Pandora, Google, etc.)
[DW: sfe_opportunity]</description>
    <inlineHelpText>[Common File Layout] [Stova, RFI, Submitted Grad Application Integrations] [Manual] The most recent source/platform that the prospect came in on (ex: Facebook, Pandora, Google, etc.)
[DW: sfe_opportunity]</inlineHelpText>
    <label>Lead Source Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Access MBA</fullName>
            </value>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>American Indian Studies Program</fullName>
            </value>
            <value>
                <fullName>ASU Employee</fullName>
            </value>
            <value>
                <fullName>ASU Homepage</fullName>
            </value>
            <value>
                <fullName>ASU Online</fullName>
            </value>
            <value>
                <fullName>ASU Online Rover</fullName>
            </value>
            <value>
                <fullName>AZBusiness</fullName>
            </value>
            <value>
                <fullName>AZ PES Apache Junction</fullName>
            </value>
            <value>
                <fullName>AZ PES City of Avondale</fullName>
            </value>
            <value>
                <fullName>AZ PES City Of Buckeye</fullName>
            </value>
            <value>
                <fullName>AZ PES City Of Chandler</fullName>
            </value>
            <value>
                <fullName>AZ PES City of Goodyear</fullName>
            </value>
            <value>
                <fullName>AZ PES City of Peoria</fullName>
            </value>
            <value>
                <fullName>AZ PES City Of Phoenix</fullName>
            </value>
            <value>
                <fullName>AZ PES City Of Sahuarita</fullName>
            </value>
            <value>
                <fullName>AZ PES City of Scottsdale</fullName>
            </value>
            <value>
                <fullName>AZ PES City Of Tempe</fullName>
            </value>
            <value>
                <fullName>AZ PES City of Tolleson</fullName>
            </value>
            <value>
                <fullName>AZ PES City Of Tucson</fullName>
            </value>
            <value>
                <fullName>AZ PES DOA</fullName>
            </value>
            <value>
                <fullName>AZ PES Marana</fullName>
            </value>
            <value>
                <fullName>AZ PES Pima County</fullName>
            </value>
            <value>
                <fullName>AZ PES Queen Creek</fullName>
            </value>
            <value>
                <fullName>AZ PES Town Of Gilbert</fullName>
            </value>
            <value>
                <fullName>AZ PES Town of Oro Valley</fullName>
            </value>
            <value>
                <fullName>AZ Republic</fullName>
            </value>
            <value>
                <fullName>Beta Gamma Sigma</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>