force-app/main/default/objects/Opportunity/fields/Leave_of_Absence__c.field-meta.xml
<CustomField>
    <fullName>Leave_of_Absence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Peoplesoft] - Admitted student on a leave of absence.</description>
    <inlineHelpText>Admitted student has requested/been approved for a leave of absence, opportunity term reflects the anticipated return term.</inlineHelpText>
    <label>Leave of Absence</label>
    <type>Checkbox</type>
</CustomField>