force-app/main/default/objects/Opportunity/fields/LORs_Received_Count__c.field-meta.xml
<CustomField>
    <fullName>LORs_Received_Count__c</fullName>
    <businessOwnerGroup>Data_Owner_Recruitment</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[SnapLogic] Data is imported nightly, Sun-Thurs, from Redshift EDW matching letters of recommendation to Opportunity on applid = external_application_number.</description>
    <inlineHelpText>[SnapLogic] Data is imported nightly, Sun-Thurs, from Redshift EDW matching letters of recommendation to Opportunity on applid = external_application_number.</inlineHelpText>
    <label>Letters of Recommendation Received</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>