force-app/main/default/objects/Opportunity/fields/Major_Incompatibility__c.field-meta.xml
<CustomField>
    <fullName>Major_Incompatibility__c</fullName>
    <description>ASU Experience Builder form data on campus incompatibility based on student responses. Low is unlikely to switch campus. High is likely to switch campus.</description>
    <inlineHelpText>ASU Experience Builder form data on campus incompatibility based on student responses. Low is unlikely to switch campus. High is likely to switch campus.</inlineHelpText>
    <label>Major Incompatibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>