force-app/main/default/objects/Opportunity/fields/Math_Test_Score__c.field-meta.xml
<CustomField>
    <fullName>Math_Test_Score__c</fullName>
    <description>[Orientation site] - Score on math placement test
[DW: sfe_opportunity]</description>
    <label>Math Placement Test Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>