force-app/main/default/objects/Opportunity/fields/Matriculation_Deposit_Status__c.field-meta.xml
<CustomField>
    <fullName>Matriculation_Deposit_Status__c</fullName>
    <businessOwnerGroup>Data_Owner_WPC_Graduate_Programs_Office</businessOwnerGroup>
    <description>[Flow - Deposit_RTAS_On_Create_or_Update] Displays the status from the related Matriculation Deposit record.</description>
    <inlineHelpText>[Flow - Deposit_RTAS_On_Create_or_Update] Displays the status from the related Matriculation Deposit record.</inlineHelpText>
    <label>Matriculation Deposit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Reversed</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>