force-app/main/default/objects/Opportunity/fields/Military_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Military_Benefits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Peoplesoft] - From the Supplemental App in PeopleSoft  (The student has indicated an interest in applying for military educational benefits.)
[DW: sfe_opportunity]</description>
    <inlineHelpText>The student has indicated an interest in applying for military educational benefits.</inlineHelpText>
    <label>Military Benefits</label>
    <type>Checkbox</type>
</CustomField>