force-app/main/default/objects/Opportunity/fields/Military_Branch__c.field-meta.xml
<CustomField>
    <fullName>Military_Branch__c</fullName>
    <description>[Self-reported] - From the supplemental application. The data has not been confirmed. Examples include: Air Force, Army, Coast Guard, Marines, Navy
[DW: sfe_opportunity]</description>
    <inlineHelpText>Self-reported from the supplemental application. The data has not been confirmed.</inlineHelpText>
    <label>Military Branch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Force</fullName>
            </value>
            <value>
                <fullName>Army</fullName>
            </value>
            <value>
                <fullName>Coast Guard</fullName>
            </value>
            <value>
                <fullName>Marines</fullName>
            </value>
            <value>
                <fullName>Navy</fullName>
            </value>
            <value>
                <fullName>NOAA</fullName>
            </value>
            <value>
                <fullName>USPHS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>