force-app/main/default/objects/Opportunity/fields/Military_Status__c.field-meta.xml
<CustomField>
    <fullName>Military_Status__c</fullName>
    <description>[Self-reported] - From the prospective student or the supplemental application. It has not been confirmed.Examples include: Active Duty, National Guard, Veteran, Spouse/Dependent, Armed Forces Reserve
[DW: sfe_opportunity]</description>
    <inlineHelpText>Self-reported from the prospective student or the supplemental application. It has not been confirmed.</inlineHelpText>
    <label>Military Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Duty</fullName>
            </value>
            <value>
                <fullName>Armed Forces Reserve</fullName>
            </value>
            <value>
                <fullName>National Guard</fullName>
            </value>
            <value>
                <fullName>Spouse/Dependent</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Dependent</fullName>
                <isActive>false</isActive>
                <label>Dependent</label>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>None of these options apply</fullName>
                <isActive>false</isActive>
                <label>None of these options apply</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <isActive>false</isActive>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Son or daughter of a U.S. service member or veteran</fullName>
                <isActive>false</isActive>
                <label>Son or daughter of a U.S. service member or veteran</label>
            </value>
            <value>
                <fullName>Spouse</fullName>
                <isActive>false</isActive>
                <label>Spouse</label>
            </value>
            <value>
                <fullName>Spouse of a U.S. service member or veteran</fullName>
                <isActive>false</isActive>
                <label>Spouse of a U.S. service member or veteran</label>
            </value>
            <value>
                <fullName>Spouse/Dependent of a U.S. service member or veteran</fullName>
                <isActive>false</isActive>
                <label>Spouse/Dependent of a U.S. service member or veteran</label>
            </value>
            <value>
                <fullName>Spouse/Dependent of a service member or veteran</fullName>
                <isActive>false</isActive>
                <label>Spouse/Dependent of a service member or veteran</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>