force-app/main/default/objects/Opportunity/fields/MMR_on_file__c.field-meta.xml
<CustomField>
    <fullName>MMR_on_file__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Orientation] - Checkbox that shows if they got their MMR shot
[DW: sfe_opportunity]</description>
    <label>MMR on file</label>
    <type>Checkbox</type>
</CustomField>