force-app/main/default/objects/Opportunity/fields/National_Hispanic_Scholar__c.field-meta.xml
<CustomField>
    <fullName>National_Hispanic_Scholar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Manual import] - Checkbox that shows if they are a National Hispanic Scholar
[DW: sfe_opportunity]</description>
    <label>National Hispanic (Honorable Mention)</label>
    <type>Checkbox</type>
</CustomField>