force-app/main/default/objects/Opportunity/fields/National_Merit_Semifinalist__c.field-meta.xml
<CustomField>
    <fullName>National_Merit_Semifinalist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[DW: sfe_opportunity]</description>
    <label>National Scholar</label>
    <type>Checkbox</type>
</CustomField>