force-app/main/default/objects/Opportunity/fields/National_Service__c.field-meta.xml
<CustomField>
    <fullName>National_Service__c</fullName>
    <description>Opportunities Contact National Service</description>
    <label>National Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peace Corps</fullName>
            </value>
            <value>
                <fullName>Americorps</fullName>
            </value>
            <value>
                <fullName>Teach for America</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>