force-app/main/default/objects/Opportunity/fields/Online_Degree__c.field-meta.xml
<CustomField>
    <fullName>Online_Degree__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Webform or manual entry] - Checkbox to indicate they are interested in online education
[DW: sfe_opportunity]</description>
    <label>Interested in Online Degree</label>
    <type>Checkbox</type>
</CustomField>