force-app/main/default/objects/Opportunity/fields/Opportunity_Assignment_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Assignment_Number__c</fullName>
    <description>A number from 1 to 100 used to divide Opportunities for ad hoc calling lists. Created by combining or the last digit of the minute and second of the Created Time, and adding 1.</description>
    <formula>VALUE(MID(TEXT(CreatedDate),19,1) &amp; MID(TEXT(CreatedDate),16,1)) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A number from 1 to 100 used to divide Opportunities for ad hoc calling lists. Created by combining or the last digit of the minute and second of the Created Time, and adding 1.</inlineHelpText>
    <label>Opportunity Assignment Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>