force-app/main/default/objects/Opportunity/fields/Opportunity_Assignment_Number_Rand__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Assignment_Number_Rand__c</fullName>
    <label>Opportunity Assignment Number Rand</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>