force-app/main/default/objects/Opportunity/fields/Opportunity_Key__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Key__c</fullName>
    <description>[Peoplesoft] - used for matching undergrad and grad applicants</description>
    <label>Opportunity Key</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>