force-app/main/default/objects/Opportunity/fields/Opportunity_Team__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Team__c</fullName>
    <description>This shows the group that is working with the specific opportunity.</description>
    <label>Opportunity Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASU Global</fullName>
            </value>
            <value>
                <fullName>ASU NewSpace</fullName>
            </value>
            <value>
                <fullName>Career Services</fullName>
            </value>
            <value>
                <fullName>Digital Antiquity</fullName>
            </value>
            <value>
                <fullName>E+I</fullName>
            </value>
            <value>
                <fullName>EdPlus</fullName>
            </value>
            <value>
                <fullName>Engineering Career Services</fullName>
            </value>
            <value>
                <fullName>Lightworks</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Public Service Academy (PSA)</fullName>
            </value>
            <value>
                <fullName>Research Computing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>