force-app/main/default/objects/Opportunity/fields/Orientation_Date__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Date__c</fullName>
    <description>[webform] - Date student will be attending orientation.
[DW: sfe_opportunity]</description>
    <inlineHelpText>Date student will be attending orientation.</inlineHelpText>
    <label>Orientation Date</label>
    <type>Date</type>
</CustomField>