force-app/main/default/objects/Opportunity/fields/Orientation_Location__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[webform] - location of orientation
[DW: sfe_opportunity]</description>
    <label>Orientation Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Opportunities (Orientation Location)</relationshipLabel>
    <relationshipName>Opportunities_Orientation_Location</relationshipName>
    <type>Lookup</type>
</CustomField>